# butterfly

./: .gitignore  Dockerfile  README.md  docker-compose.yml  payload.json  pyproject.toml  run_demo.py  test_prompt.txt
.workflow_cache/: sales_last_week.json  test_sales_last_week.json
src/: __init__.py  __main__.py  openai_agent.py  openai_agent_executor.py  workflow_toolset.py
